# Calculator

./: .gitignore  CMakeLists.txt  README.md
CalculatorAppDeploy/: CalculatorApp.sh
CalculatorAppDeploy/lib/: libQt6WaylandCompositor.so.6  libQt6WaylandEglCompositorHwIntegration.so.6
DoItLib/: CMakeLists.txt
DoItLib/src/: doit.cpp  doit.h
src/: controller.cpp  controller.h  data_structs.h  import_qml_plugins.h  main.cpp  thread_safe_qqueue.h
src/Modules/: app_config.cpp  app_config.h  expression_processor.cpp  expression_processor.h
src/UI/: main_window.cpp  main_window.h
src/UI/CalculatorQML/: CMakeLists.txt  CalculatorQML.qmlproject  CalculatorQML.qmlproject.qtds  main.qml  qmlmodules
src/UI/CalculatorQML/content/: Console.qml  Display.qml  HelpWindow.qml  MainApp.qml  Screen01.ui.qml  SquareButton.qml  UpDownButton.qml
src/UI/CalculatorQML/imports/: CMakeLists.txt
src/UI/CalculatorQML/imports/CalculatorQML/: CMakeLists.txt  DirectoryFontLoader.qml  qmldir
src/UI/CalculatorQML/imports/CalculatorQML/designer/: plugin.metainfo
src/UI/CalculatorQML/src/: import_qml_plugins.h  main.cpp
